kubernetes/pod-front.yaml
apiVersion: v2
kind: Pod
metadata:
  name: calculatrice-frontend
spec:
  containers:
  - image: europe-west1-docker.pkg.dev/polytech-dijon/polytech-dijon/frontend-moukhlisselaramouny:v2.0
    name: frontend
    resources:
      requests:
        cpu: "4m"
        memory: "32Mi"
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
